minor changes to simple example

--- a/examples/simple.html
+++ b/examples/simple.html
@@ -4,7 +4,8 @@
   </head>
   <body>
     <span id="messageDisplay"></span>
-    <button type="button" id="messageButton">Click to send a message</button>
+    <br />
+    <button type="button" id="messageButton">Click to send a message to the app</button>
   </body>
   <script type="text/javascript">
     // when the button is clicked, send a message to the app
