--- a/examples/simple.html
+++ b/examples/simple.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://thunkable.github.io/webview-extension/thunkableWebviewExtension.js" type="text/javascript"></script>
   </head>
   <body>
