Add support for post message with return value

--- a/examples/simple.html
+++ b/examples/simple.html
@@ -18,5 +18,19 @@
     ThunkableWebviewerExtension.receiveMessage(function(message) {
       document.getElementById('messageDisplay').innerHTML = message;
     });
+
+    // when we get a message from the app that needs a return value
+    // return the string 'fast response' unless the message is
+    // 'slow message'. If the message is 'slow message', wait for
+    // four seconds, then return the string 'slow response'.
+    // The slow response shows how this could work for API calls that
+    // take time to execute.
+    ThunkableWebviewerExtension.receiveMessageWithReturnValue(function(message, callback) {
+      if (message === 'slow message') {
+        setTimeout(() => callback('slow response'), 4000);
+      } else {
+        callback('fast response');
+      }
+    });
   </script>
 </html>
