Reduce graph series tick marks

--- a/examples/graphSeries.html
+++ b/examples/graphSeries.html
@@ -22,7 +22,8 @@
         x: {
             type: 'timeseries',
             tick: {
-              format: '%a %I %p'
+              format: '%a %I %p',
+              count: 5,
             }
         }
     }
